--- a/index_joe_uiux_works.html
+++ b/index_joe_uiux_works.html
@@ -5174,6 +5174,9 @@
                                     <img src="images/gapp_pic_6-14-8.png" style="max-width:100%">
                                 </div>
                             </div>
+                            <div class="pup_window_content_end_tip_container">
+                                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">投資交易APP&nbsp;IOS視覺稿</span></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -5407,7 +5410,9 @@
                                     <img src="images/gapp_pic_6-14-8a.png" style="max-width:100%">
                                 </div>
                             </div>
-
+                            <div class="pup_window_content_end_tip_container">
+                                <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">投資交易APP&nbsp;Android視覺稿</span></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -5415,6 +5420,31 @@
         </div>
     </div>
     <!-- ... 金融服務商 投資交易APP 視覺稿 end ... -->
+    <!-- ... 金融服務商 投資交易APP 設計亮點  ... -->
+    <div class="pup_window gapp_works_3_pup">
+        <div class="pup_close_btn set_middle" role="button">
+            <img src="images/close_icon.png" class="pup_close_icon" alt="關閉視窗">
+        </div>
+        <div class="pup_window_content">
+            <div class="pup_window_content_title h4 font_bold">投資交易APP&nbsp;設計亮點</div>
+            <div class="pup_window_content_scroll">
+                <div class="pup_window_content_part">
+                    <div class="pup_content">
+                        <div class="pup_content_pic">
+                            <picture>
+                                <source media="(max-width:1024px)" srcset="images/taian_pic_1-768.png" />
+                                <img src="images/taian_pic_1.png" style="max-width:100%">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
+                <div class="pup_window_content_end_tip_container">
+                    <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">投資交易APP&nbsp;設計亮點</span></span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ... 金融服務商 投資交易APP 設計亮點 end ... -->
     <!-- ... 泰安 行銷網頁資料提供  ... -->
     <div class="pup_window taian_info_pup" style="display:none;">
         <div class="pup_close_btn set_middle" role="button">
