--- a/index_joe_uiux_works.html
+++ b/index_joe_uiux_works.html
@@ -147,6 +147,9 @@
             $(".gapp_works_2_btn").click(function() {
                 $(".gapp_works_2_pup,.pup_bg").fadeIn(500);
             });
+            $(".gapp_works_3_btn").click(function() {
+                $(".gapp_works_3_pup,.pup_bg").fadeIn(500);
+            });
             $(".pup_close_btn").click(function() {
                 $(".pup_window,.pup_bg").hide();
             });
@@ -1272,8 +1275,8 @@
                                             <span class="gapp_works_2_btn">視覺稿</span>
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                            <img src="images/pup_link_dot_disabled.png" class="pup_link_dot">
-                                            <span class="disabled_link">設計亮點</span>
+                                            <img src="images/pup_link_dot.png" class="pup_link_dot">
+                                            <span class="gapp_works_3_btn">設計亮點</span>
                                         </div>
                                     </div>
                                 </div>
@@ -1306,8 +1309,8 @@
                                     <span class="gapp_works_2_btn">視覺稿</span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot_disabled.png" class="pup_link_dot">
-                                    <span class="disabled_link">設計亮點</span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot">
+                                    <span class="gapp_works_3_btn">設計亮點</span>
                                 </div>
                             </div>
                         </div>
@@ -5421,7 +5424,7 @@
     </div>
     <!-- ... 金融服務商 投資交易APP 視覺稿 end ... -->
     <!-- ... 金融服務商 投資交易APP 設計亮點  ... -->
-    <div class="pup_window gapp_works_3_pup">
+    <div class="pup_window gapp_works_3_pup" style="display:none;">
         <div class="pup_close_btn set_middle" role="button">
             <img src="images/close_icon.png" class="pup_close_icon" alt="關閉視窗">
         </div>
@@ -5430,10 +5433,162 @@
             <div class="pup_window_content_scroll">
                 <div class="pup_window_content_part">
                     <div class="pup_content">
-                        <div class="pup_content_pic">
+                        <div class="part_title h5 font_bold emphasize_text">一、優化介面，提高使用效率</div>
+                        <div class="pup_text large_text">
+                            使用者接收的資訊量，決定操作時間、認知成本高低，<br />故介面需考量使用情境，運用收納分層、功能模式...等方法，提升使用效率。
+                        </div>
+                        <div class="pup_content_pic" style="margin-top:30px;">
+                            <div class="pup_normal_text font_bold" style="margin-bottom:5px;">1.登入頁</div>
+                            <div class="pup_normal_text_small">不好的設計</div>
                             <picture>
-                                <source media="(max-width:1024px)" srcset="images/taian_pic_1-768.png" />
-                                <img src="images/taian_pic_1.png" style="max-width:100%">
+                                <img src="images/gapp_pic_7-1.png" style="max-width:100%">
+                            </picture>
+                        </div>
+                        <div class="pup_text large_text font_bold emphasize_text">
+                            資訊、功能CTA繁多凌亂
+                        </div>
+                        <div class="pup_normal_text">
+                            讓使用者(會員登入、忘記密碼、非會員註冊)需專注閱讀，難以輕鬆直覺的選擇操作。
+                        </div>
+                        <div class="pup_content_pic" style="margin-top:30px;">
+                            <div class="pup_normal_text_small">好的設計</div>
+                            <picture>
+                                <img src="images/gapp_pic_6-1.png" style="max-width:100%">
+                            </picture>
+                        </div>
+                        <div class="pup_text large_text font_bold emphasize_text" style="margin-bottom:5px;">
+                            收納分層
+                        </div>
+                        <div class="pup_normal_text">
+                            <ul class="text_item_list" style="list-style:disc;padding-left:25px;">
+                                <li><span class="emphasize_text">依使用情境，規劃版面配置：</span><br />將介面元件和資訊文字，依類型(登入、登入問題、註冊)個別集中、排序區隔，<br />讓使用者能根據需求快速反應操作，減輕閱讀判斷的認知負擔</li>
+                                <li><span class="emphasize_text">將操作需求，分層步驟：</span><br />根據「找尋&nbsp;→&nbsp;選擇&nbsp;→&nbsp;獲得滿足」的使用原則，<br />規劃介面操作「排整CTA按鈕&nbsp;→&nbsp;使用者點選&nbsp;→&nbsp;顯示後續操作」，依此避免同時顯示各類資訊，提升介面易讀性。</li>
+                            </ul>
+                        </div>
+                        <div class="pup_content_pic" style="margin-top:20px;">
+                            <div class="pup_normal_text_small">點選「使用者代號的資訊符號」，顯示初始代號提示</div>
+                            <picture>
+                                <img src="images/gapp_pic_7-2.png" style="max-width:100%">
+                            </picture>
+                        </div>
+                        <div class="pup_content_pic" style="margin-top:20px;">
+                            <div class="pup_normal_text_small">點選「登入遇到困難」，前往登入問題的流程頁面</div>
+                            <picture>
+                                <img src="images/gapp_pic_6-4.png" style="max-width:100%">
+                            </picture>
+                        </div>
+                        <div class="pup_content_pic" style="margin-top:30px;">
+                            <div class="pup_normal_text font_bold" style="margin-bottom:5px;">2.登入身分頁</div>
+                            <div class="pup_normal_text_small">不好的設計</div>
+                            <picture>
+                                <img src="images/gapp_pic_7-3.png" style="max-width:100%">
+                            </picture>
+                        </div>
+                        <div class="pup_text large_text font_bold emphasize_text">
+                            功能目標相互混淆
+                        </div>
+                        <div class="pup_normal_text">
+                            選擇登入與刪除身分，是個別獨立的功能目標，若存於同一個介面，容易造成使用認知的混淆，<br />如：依造客戶網站的版本，點擊右箭頭是「選擇登入」還是「前往刪除」？
+                        </div>
+                        <div class="pup_content_pic" style="margin-top:20px;">
+                            <div class="pup_normal_text_small">好的設計</div>
+                            <picture>
+                                <img src="images/gapp_pic_6-5.png" style="max-width:100%">
+                            </picture>
+                            <picture>
+                                <img src="images/gapp_pic_6-6.png" style="max-width:100%">
+                            </picture>
+                        </div>
+                        <div class="pup_text large_text font_bold emphasize_text" style="margin-bottom:5px;">
+                            區分功能目標
+                        </div>
+                        <div class="pup_normal_text">
+                            <ul class="text_item_list" style="list-style:disc;padding-left:25px;">
+                                <li><span class="emphasize_text">切換操作模式：</span><br />將登入和刪除(編輯)身分獨立操作，使功能目標明確，提高使用者操作效率。<br /><span class="pup_normal_text_small">*介面更具擴充性。</span></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="pup_window_content_part">
+                    <div class="pup_content">
+                        <div class="part_title h5 font_bold emphasize_text">二、介面配置具一致性</div>
+                        <div class="pup_text large_text">
+                            版面配置、用色邏輯保持相同，使用者能直覺複製操作模式，<span class="emphasize_text">減少操作的認知時間</span>
+                        </div>
+                        <div class="pup_content_pic" style="margin-top:20px;">
+                            <div class="pup_normal_text font_bold" style="margin-bottom:5px;">首頁為例</div>
+                            <div class="pup_text large_text font_bold emphasize_text">
+                                版面配置
+                            </div>
+                            <div class="pup_normal_text" style="margin-bottom:10px;">
+                                <span class="emphasize_text">同類型的資訊、功能，在頁面、主題項目、項目元件有固定的對應位置。</span><br />
+                                右上角為輔助功能、中間為內容(依序為附註、標題、資訊、備註)，下方為CTA功能按鈕。
+                            </div>
+                            <picture>
+                                <img src="images/gapp_pic_7-4.png" style="max-width:100%">
+                            </picture>
+                        </div>
+                        <div class="pup_content_pic" style="margin-top:20px;">
+                            <div class="pup_text large_text font_bold emphasize_text">
+                                用色邏輯
+                            </div>
+                            <div class="pup_normal_text" style="margin-bottom:10px;">
+                                顏色功能化，並標準化運用於整體介面。
+                            </div>
+                            <picture>
+                                <source media="(max-width:1024px)" srcset="images/gapp_pic_7-5-1024.png" />
+                                <img src="images/gapp_pic_7-5.png" style="max-width:100%">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
+                <div class="pup_window_content_part">
+                    <div class="pup_content">
+                        <div class="part_title h5 font_bold emphasize_text">三、介面意象化</div>
+                        <div class="pup_text large_text">
+                            模仿生活的實際物品，使用者能直覺反應元件功能、狀態...等。
+                        </div>
+                        <div class="pup_content_pic" style="margin-top:20px;">
+                            <div class="pup_normal_text" style="margin-bottom:5px;">優惠券清單為例</div>
+                            <picture>
+                                <img src="images/gapp_pic_6-13-4.png" style="max-width:100%">
+                            </picture>
+                            <div class="pup_normal_text">
+                                如：以撕下存根聯的樣貌，表達已使用的優惠券。
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="pup_window_content_part">
+                    <div class="pup_content">
+                        <div class="part_title h5 font_bold emphasize_text">四、各裝置版面適配性</div>
+                        <div class="pup_text large_text">
+                            使用Figma的Auto&nbsp;layout，能依需求快速審視版面。
+                        </div>
+                        <div class="pup_content_pic" style="margin-top:20px;">
+                            <div class="pup_normal_text font_bold">登入頁為例</div>
+                            <div class="pup_normal_text">
+                                須一屏顯示整體介面，提供各手機主要型號視覺圖進行確認
+                            </div>
+                            <div class="pup_normal_text_small" style="margin-top:10px;">Iphone&nbsp;13&nbsp;pro&nbsp;max、Iphone&nbsp;14&nbsp;pro&nbsp;max</div>
+                            <picture>
+                                <img src="images/gapp_pic_7-6-1.png" style="max-width:100%">
+                            </picture>
+                            <div class="pup_normal_text_small" style="margin-top:10px;">Iphone&nbsp;12&nbsp;pro&nbsp;max、Iphone&nbsp;13&nbsp;pro&nbsp;max</div>
+                            <picture>
+                                <img src="images/gapp_pic_7-6-2.png" style="max-width:100%">
+                            </picture>
+                            <div class="pup_normal_text_small" style="margin-top:10px;">Iphone&nbsp;12、Iphone&nbsp;12&nbsp;pro、Iphone&nbsp;13、Iphone&nbsp;13&nbsp;pro</div>
+                            <picture>
+                                <img src="images/gapp_pic_7-6-3.png" style="max-width:100%">
+                            </picture>
+                            <div class="pup_normal_text_small" style="margin-top:10px;">Iphone&nbsp;X、Iphone&nbsp;XS、Iphone&nbsp;11&nbsp; pro、Iphone&nbsp;12&nbsp;mini、Iphone&nbsp;13&nbsp;mini、Iphone&nbsp;X</div>
+                            <picture>
+                                <img src="images/gapp_pic_7-6-4.png" style="max-width:100%">
+                            </picture>
+                            <div class="pup_normal_text_small" style="margin-top:10px;">Iphone&nbsp;7、Iphone&nbsp;8、Iphone&nbsp;SE</div>
+                            <picture>
+                                <img src="images/gapp_pic_7-6-5.png" style="max-width:100%">
                             </picture>
                         </div>
                     </div>
