--- a/index_joe_uiux_works.html
+++ b/index_joe_uiux_works.html
@@ -5435,7 +5435,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">一、優化介面，提高使用效率</div>
                         <div class="pup_text large_text">
-                            使用者接收的資訊量，決定操作時間、認知成本高低，<br />故介面需考量使用情境，運用收納分層、功能模式...等方法，提升使用效率。
+                            使用者接收的資訊量，決定操作時間、認知成本高低，<br />故介面需<span class="emphasize_text">考量使用情境，運用收納分層、功能模式...等方法</span>提升使用效率。
                         </div>
                         <div class="pup_content_pic" style="margin-top:30px;">
                             <div class="pup_normal_text font_bold" style="margin-bottom:5px;">1.登入頁</div>
@@ -5488,7 +5488,7 @@
                             功能目標相互混淆
                         </div>
                         <div class="pup_normal_text">
-                            選擇登入與刪除身分，是個別獨立的功能目標，若存於同一個介面，容易造成使用認知的混淆，<br />如：依造客戶網站的版本，點擊右箭頭是「選擇登入」還是「前往刪除」？
+                            選擇登入與移除身分，是個別獨立的功能目標，若存於同一個介面，容易造成使用認知的混淆，<br />如：依造客戶網站的版本，點擊右箭頭是「選擇登入」還是「前往移除」？
                         </div>
                         <div class="pup_content_pic" style="margin-top:20px;">
                             <div class="pup_normal_text_small">好的設計</div>
@@ -5500,11 +5500,11 @@
                             </picture>
                         </div>
                         <div class="pup_text large_text font_bold emphasize_text" style="margin-bottom:5px;">
-                            區分功能目標
+                            區分功能模式
                         </div>
                         <div class="pup_normal_text">
                             <ul class="text_item_list" style="list-style:disc;padding-left:25px;">
-                                <li><span class="emphasize_text">切換操作模式：</span><br />將登入和刪除(編輯)身分獨立操作，使功能目標明確，提高使用者操作效率。<br /><span class="pup_normal_text_small">*介面更具擴充性。</span></li>
+                                <li><span class="emphasize_text">切換操作版面：</span><br />將登入和移除(編輯)身分獨立操作，使功能目標明確，提高使用者操作效率。<br /><span class="pup_normal_text_small">*介面更具擴充性。</span></li>
                             </ul>
                         </div>
                     </div>
@@ -5513,7 +5513,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">二、介面配置具一致性</div>
                         <div class="pup_text large_text">
-                            版面配置、用色邏輯保持相同，使用者能直覺複製操作模式，<span class="emphasize_text">減少操作的認知時間</span>
+                            版面配置、用色邏輯保持相同，<span class="emphasize_text">能直覺複製操作模式，減少認知時間</span>
                         </div>
                         <div class="pup_content_pic" style="margin-top:20px;">
                             <div class="pup_normal_text font_bold" style="margin-bottom:5px;">首頁為例</div>
@@ -5568,7 +5568,7 @@
                         <div class="pup_content_pic" style="margin-top:20px;">
                             <div class="pup_normal_text font_bold">登入頁為例</div>
                             <div class="pup_normal_text">
-                                須一屏顯示整體介面，提供各手機主要型號視覺圖進行確認
+                                <span class="emphasize_text">須一屏顯示整體介面</span>，提供各手機型號視覺圖進行確認
                             </div>
                             <div class="pup_normal_text_small" style="margin-top:10px;">Iphone&nbsp;13&nbsp;pro&nbsp;max、Iphone&nbsp;14&nbsp;pro&nbsp;max</div>
                             <picture>
