--- a/website/travel_activity/page.html
+++ b/website/travel_activity/page.html
@@ -28,7 +28,7 @@
                 <div class="nav_choice"><a href="#s2">旅遊常見情境</a></div>
                 <div class="nav_choice"><a href="#s3">合作廠商</a></div>
                 <div class="nav_choice" style="display:none;"><a href="#">得獎名單</a></div>
-                <div class="nav_choice none_1279 reward_record_btn"><a href="#">我的抽獎紀錄</a></div>
+                <div class="nav_choice none_1279 reward_record_btn" style="display:none;"><a href="#">我的抽獎紀錄</a></div>
                 <div class="nav_choice none_1279" style="display:none;"><a href="#">會員註冊/登入</a></div>
                 <div class="other_site_container">
                     <a href="#" target="_blank"><img src="image/fb_logo.png" class="hvr-top"></a>
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="nav_mobile">
-                <a href="#" class="reward_record_btn">抽獎紀錄</a>
+                <a href="#" class="reward_record_btn" style="display:none;">抽獎紀錄</a>
                 <a href="#" style="display:none;">註冊/登入</a>
                 <img src="image/nav_icon.png" class="nav_icon nav_mobile_btn nav_icon_w">
                 <img src="image/nav_icon_b.png" class="nav_icon nav_mobile_btn nav_icon_b">
