--- a/index_joe_uiux_works.html
+++ b/index_joe_uiux_works.html
@@ -219,7 +219,7 @@
                     <span class="title">總結</span>
                     <span><img src="images/page_list_item_arrow.png" class="page_list_item_arrow" alt="下拉選單"></span>
                 </div>
-                <div class="page_list_item_page_choice">
+                <div class="page_list_item_page_choice" style="display:none;">
                     <div><a href="#p15">專案能力描述</a></div>
                     <div><a href="#p16">聯絡作者</a></div>
                 </div>
