--- a/index_joe_uiux_works.html
+++ b/index_joe_uiux_works.html
@@ -4008,7 +4008,7 @@
 
         </div>
         <div class="pup_window_small_title_container">
-            <div class="pup_window_small_title emphasize_text">用戶原型</div>
+            <div class="pup_window_small_title emphasize_text">用戶原型入口</div>
             <div class="pup_window_small_subtitle">選擇您目前的螢幕解析度</div>
         </div>
         <div class="pup_window_small_content">
@@ -4023,12 +4023,11 @@
             </a>
         </div>
         <div class="pup_window_small_tip">
-            <span>進入用戶原型後，
+            <span>進入後，若需隱藏figma功能選單
                 <ul style="list-style:disc;margin:5px 0px;padding-left:20px;">
                     <li>Window按「ctrl」+「\」</li>
                     <li>Mac按「command」+「\」</li>
                 </ul>
-                可隱藏figma功能選單，便於完整介面操作。
             </span>
         </div>
 
