--- a/index_joe_uiux_works.html
+++ b/index_joe_uiux_works.html
@@ -6640,12 +6640,12 @@
                                 <div class="text_row">
                                     <div class="text_item">
                                         <div>
-                                            <img src="images/yulon_pic_2-1.png" class="sino_pic_7">
-                                            <img src="images/yulon_pic_2-2.png" class="sino_pic_7">
-                                            <img src="images/yulon_pic_2-3.png" class="sino_pic_7">
-                                            <img src="images/yulon_pic_2-4.png" class="sino_pic_7">
-                                            <img src="images/yulon_pic_2-5.png" class="sino_pic_7">
-                                            <img src="images/yulon_pic_2-6.png" class="sino_pic_7">
+                                            <img src="images/yulon_pic_2-1.png" class="sino_pic_9">
+                                            <img src="images/yulon_pic_2-2.png" class="sino_pic_9">
+                                            <img src="images/yulon_pic_2-3.png" class="sino_pic_9">
+                                            <img src="images/yulon_pic_2-4.png" class="sino_pic_9">
+                                            <img src="images/yulon_pic_2-5.png" class="sino_pic_9">
+                                            <img src="images/yulon_pic_2-6.png" class="sino_pic_9">
                                         </div>
                                     </div>
                                 </div>
@@ -6721,12 +6721,12 @@
                                 <div class="text_row">
                                     <div class="text_item">
                                         <div>
-                                            <img src="images/yulon_pic_3-1.png" class="sino_pic_7">
-                                            <img src="images/yulon_pic_3-2.png" class="sino_pic_7">
-                                            <img src="images/yulon_pic_3-3.png" class="sino_pic_7">
-                                            <img src="images/yulon_pic_3-4.png" class="sino_pic_7">
-                                            <img src="images/yulon_pic_3-5.png" class="sino_pic_7">
-                                            <img src="images/yulon_pic_3-6.png" class="sino_pic_7">
+                                            <img src="images/yulon_pic_3-1.png" class="sino_pic_9">
+                                            <img src="images/yulon_pic_3-2.png" class="sino_pic_9">
+                                            <img src="images/yulon_pic_3-3.png" class="sino_pic_9">
+                                            <img src="images/yulon_pic_3-4.png" class="sino_pic_9">
+                                            <img src="images/yulon_pic_3-5.png" class="sino_pic_9">
+                                            <img src="images/yulon_pic_3-6.png" class="sino_pic_9">
                                         </div>
                                     </div>
                                 </div>
@@ -6752,7 +6752,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pup_window_content_next_tip">接續以頁面布局，<span class="emphasize_text font_bold">建立APP前台&amp;管理後台&nbsp;線框稿</span></div>
+                    <div class="pup_window_content_next_tip">接續以頁面布局，<span class="emphasize_text font_bold">建立線框稿。</span></div>
                     <div class="pup_window_content_end_tip_container">
                         <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">管理後台&nbsp;頁面布局</span></span>
                     </div>
