--- a/index_joe_uiux_works.html
+++ b/index_joe_uiux_works.html
@@ -20,7 +20,7 @@
     <link rel="shoutcut icon" href="images/favicon-jw.ico" />
     <title>Joe Wang UI.UX作品集</title>
     <link href="css/index.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
 
     <!-- 區塊浮現動作套件 http://kenwheeler.github.io/slick/ -->
     <link href="css/theme-animate.css" rel="stylesheet" type="text/css">
