--- a/uiux_index.html
+++ b/uiux_index.html
@@ -412,8 +412,8 @@
                         <li>觀察資料脈絡，依邏輯論述想法。</li>
                     </ul>
                 </div>
-                <a id="t1_1" href="info_attribute_tell.html">
-                    <div class="info_attribute_tell_btn appear-animation" data-appear-animation="fadeInUp" role="button">了解合作夥伴對於我的看法</div>
+                <a href="info_attribute_tell.html">
+                    <div id="t1_1" class="info_attribute_tell_btn appear-animation" data-appear-animation="fadeInUp" role="button">了解合作夥伴對於我的看法</div>
                 </a>
                 <div class="info_attribute_container">
                     <div class="info_attribute_title h2 font_bold">工作特質</div>
