--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1586,7 +1586,9 @@
                                             <li>手機號碼：0927-821-279</li>
                                             <li>電子信箱：a52363037@yahoo.com.tw</li>
                                             <li>
-                                                <span class="font_bold"><a href="https://drive.google.com/file/d/1OAY7wiczgcCTnXMUBrqlF2TkMgANeGuY/view?usp=drive_link" target="_blank">簡歷(Resume).pdf</a></span>
+                                                <span class="font_bold">
+                                                    簡歷(Resume)：<a href="https://drive.google.com/file/d/1mBmh85ApHjsAKL5XQD5whgxv8t9DSpuX/view?usp=drive_link" target="_blank">第一頁.pdf</a>、<a href="https://drive.google.com/file/d/1WzahVK-7dV0CJuf2-0vWSEvrKyeLYmrj/view?usp=drive_link" target="_blank">第二頁.pdf</a>
+                                                </span>
                                             </li>
                                         </ul>
                                     </div>
@@ -1595,10 +1597,10 @@
                                     <div class="work_info_subtitle h4 font_bold" style="padding-left:15px;">
                                         回饋和建議
                                     </div>
-                                    <div style="margin-bottom:10px;padding-left:15px;">7項選擇題(4題必填)、3項問答題(非必填)</div>
+                                    <div style="margin-bottom:10px;padding-left:15px;">8項選擇題(4題必填)、4項問答題(非必填)</div>
                                     <div class="work_info_subtext" style="padding-left:17px;">
                                         <ul>
-                                            <li><span class="disabled_link font_bold" style="cursor:pointer;">Google線上表單</span></li>
+                                            <li><span class="font_bold"><a href="https://docs.google.com/forms/d/e/1FAIpQLScLUUrjDiHP_veNITIwouQITFz3aXFL_tX_TLLcaVVOBH9TvQ/viewform?usp=header" target="_blank">Google線上表單</a></span></li>
                                         </ul>
                                     </div>
                                 </div>
