--- a/uiux_index.html
+++ b/uiux_index.html
@@ -413,7 +413,7 @@
                     </ul>
                 </div>
                 <a href="info_attribute_tell.html">
-                    <div id="t1_1" class="info_attribute_tell_btn appear-animation" data-appear-animation="fadeInUp" role="button">了解合作夥伴對於我的看法</div>
+                    <div class="info_attribute_tell_btn appear-animation" data-appear-animation="fadeInUp" role="button">了解合作夥伴對於我的看法</div>
                 </a>
                 <div class="info_attribute_container">
                     <div class="info_attribute_title h2 font_bold">工作特質</div>
@@ -515,7 +515,7 @@
                                 <div class="info_skill_item_text">
                                     熟悉軟體功能，配合圖庫網站和AI繪圖，有效率完成視覺設計。
                                 </div>
-                                <a id="t1_2" href="ps_works.html">
+                                <a href="ps_works.html">
                                     <div class="info_skill_item_check font_bold appear-animation ps_works_btn" data-appear-animation="fadeInUp">觀看相關作品</div>
                                 </a>
                                 <div class="info_skill_item_pic">
@@ -527,7 +527,7 @@
                                 <div class="info_skill_item_text">
                                     能製作扁平風格的插畫素材、圖標Icon、Logo，轉為SVG圖檔用於介面設計。
                                 </div>
-                                <a id="t1_3" href="illustrator_works.html">
+                                <a href="illustrator_works.html">
                                     <div class="info_skill_item_check font_bold appear-animation illustrator_works_btn" data-appear-animation="fadeInUp">觀看相關作品</div>
                                 </a>
                                 <div class="info_skill_item_pic">
@@ -888,7 +888,7 @@
                                 進行需求訪談，依記錄製定資訊架構、頁面布局、功能機制並繪製線框稿Wireframe，協助完成PRD文件使網站開發有所依據。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a id="t1_4" href="sino_works_1.html">規劃內容</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_1.html">規劃內容</a></span>
                             </div>
                             <div class="work_info_note">
                                 <div><span>*</span>內容展示為說明個人執行事項與能力為主。</div>
@@ -903,13 +903,13 @@
                                 線框稿定案後，為整合出美觀易用且符合業務形象之網站平台，與需求方討論進行風格、配色、介面布局...等規劃，並產出視覺稿給予確認。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a id="t1_6" href="sino_works_2.html">視覺稿</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_2.html">視覺稿</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a id="t1_7" href="sino_works_3.html">規範文件</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_3.html">規範文件</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a id="t2_1" href="sino_works_4.html">設計亮點</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="sino_works_4.html">設計亮點</a></span>
                             </div>
                         </div>
                         <div class="work_info_subpart">
@@ -921,11 +921,11 @@
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span id="t2_3" class="sino_works_5_btn">用戶原型-桌機(figma)</span>
+                                <span class="sino_works_5_btn">用戶原型-桌機(figma)</span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a id="t2_4" href="#">實行性原型(前端切版)</a></span>
+                                <span><a href="sino_works_5.html">實行性原型(前端切版)</a></span>
                             </div>
                         </div>
                         <div class="work_info_subpart">
@@ -937,7 +937,7 @@
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a id="t2_5" href="sino_works_5.html">測試報告</a></span>
+                                <span><a href="sino_works_6.html">測試報告</a></span>
                             </div>
                         </div>
                     </div>
@@ -1002,11 +1002,11 @@
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a id="t2_6" href="yuanta_works_1.html">視覺風格(一)</a></span>
+                                <span><a href="yuanta_works_1.html">視覺風格(一)</a></span>
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a id="t3_1" href="yuanta_works_2.html">視覺風格(二)</a></span>
+                                <span><a href="yuanta_works_2.html">視覺風格(二)</a></span>
                             </div>
                             <div class="work_info_note">
                                 <div><span>*</span>以桌機版網站首頁，製作視覺稿進行提案。</div>
@@ -1021,7 +1021,7 @@
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a id="t3_2" href="yuanta_works_3.html">視覺稿</a></span>
+                                <span><a href="yuanta_works_3.html">視覺稿</a></span>
                             </div>
                         </div>
                     </div>
@@ -1100,10 +1100,10 @@
                                             進行需求訪談，依記錄規劃APP&amp;管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a id="t3_3" href="yulon_works_1.html">規劃內容</a></span>
+                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">規劃內容</a></span>
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a id="t3_4" href="yulon_works_2.html">線框稿</a></span>
+                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">線框稿</a></span>
                                         </div>
                                     </div>
                                     <div class="work_info_subpart">
@@ -1115,15 +1115,15 @@
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                            <span><a id="t3_5" href="yulon_works_3.html">APP視覺稿</a></span>
+                                            <span><a href="yulon_works_3.html">APP視覺稿</a></span>
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <img src="images/pup_link_dot_disabled.png" class="pup_link_dot">
-                                            <span><a id="t3_6" href="yulon_works_4.html">後台視覺稿</a></span>
+                                            <span><a href="yulon_works_4.html">後台視覺稿</a></span>
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                            <span><a id="t3_7" href="yulon_works_5.html">設計亮點</a></span>
+                                            <span><a href="yulon_works_5.html">設計亮點</a></span>
                                         </div>
                                     </div>
                                 </div>
@@ -1139,10 +1139,10 @@
                                     進行需求訪談，依記錄規劃APP&amp;管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a id="t4_1" href="yulon_works_1.html">規劃內容</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">規劃內容</a></span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a id="t4_2" href="yulon_works_2.html">線框稿</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_2.html">線框稿</a></span>
                                 </div>
                             </div>
                             <div class="work_info_subpart">
@@ -1154,15 +1154,15 @@
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a id="t4_3" href="yulon_works_3.html">APP視覺稿</a></span>
+                                    <span><a href="yulon_works_3.html">APP視覺稿</a></span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a id="t4_4" href="yulon_works_4.html">後台視覺稿</a></span>
+                                    <span><a href="yulon_works_4.html">後台視覺稿</a></span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a id="t4_5" href="yulon_works_5.html">設計亮點</a></span>
+                                    <span><a href="yulon_works_5.html">設計亮點</a></span>
                                 </div>
                             </div>
                         </div>
@@ -1243,7 +1243,7 @@
                                             參照品牌網站內容，發想APP產品核心概念、制定頁面架構內容、分析視覺形象，與客戶凝聚出設計共識和執行方向。
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a id="t5_1" href="gapp_works_1.html">提案內容</a></span>
+                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="gapp_works_1.html">提案內容</a></span>
                                         </div>
                                     </div>
                                     <div class="work_info_subpart">
@@ -1255,11 +1255,11 @@
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                            <span><a id="t5_2" href="gapp_works_2.html">視覺稿</a></span>
+                                            <span><a href="gapp_works_2.html">視覺稿</a></span>
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                            <span><a id="t5_3" href="gapp_works_3.html">設計亮點</a></span>
+                                            <span><a href="gapp_works_3.html">設計亮點</a></span>
                                         </div>
                                     </div>
                                 </div>
@@ -1277,7 +1277,7 @@
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a id="t5_4" href="gapp_works_1.html">提案內容</a></span>
+                                    <span><a href="gapp_works_1.html">提案內容</a></span>
                                 </div>
                             </div>
                             <div class="work_info_subpart">
@@ -1289,11 +1289,11 @@
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a id="t5_5" href="gapp_works_2.html">視覺稿</a></span>
+                                    <span><a href="gapp_works_2.html">視覺稿</a></span>
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a id="t5_6" href="gapp_works_3.html">設計亮點</a></span>
+                                    <span><a href="gapp_works_3.html">設計亮點</a></span>
                                 </div>
                             </div>
                         </div>
@@ -1358,7 +1358,7 @@
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a id="t5_7" href="taian_works.html">視覺稿</a></span>
+                                <span><a href="taian_works.html">視覺稿</a></span>
                             </div>
                         </div>
                         <div class="work_info_subpart">
@@ -1369,7 +1369,7 @@
                                 確認視覺稿後，進行前端切版製作初步原型。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a id="t5_8" href="website/travel_activity/page.html" target="_blank">原型展示(RWD前端切版)</a></span>
+                                <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="website/travel_activity/page.html" target="_blank">原型展示(RWD前端切版)</a></span>
                             </div>
                         </div>
                     </div>
